ID-3168 --> fix for multiple short inputs on one line, remove css remnant
Change-Id: I410149809aa7187c8ccd1baf200464eb0a409f8f

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -109,7 +109,7 @@ input[type=text], input[type=password], textarea {
 	}
 	&[readonly], &[readonly="readonly"], &[disabled] {
 		resize: none !important;
-	}padding: 10px 34px 10px 10px;
+	}
 }
 textarea {
 	overflow: auto;
@@ -305,7 +305,6 @@ label {
 				width: 75px;
 			}
 			.input-container {
-				width: 80px;
 				&:after {
 					top: 7px;
 					right: -25px;
