ID-3208 : fix tooltip position for list delete button / add "form" prefix to file upload component demo title / add general column classes (for Enrico)
Change-Id: I8d2bc7440edecda194917572be20b1a6d4183cc7

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -379,5 +379,24 @@ a {
 		white-space: nowrap;
 	}
 }
+.content-col-of-2, .content-col-of-3, .content-col-of-4, .content-col-of-5 {
+	float: left;
+
+	.input-row {
+		margin-right: 15px;
+	}
+}
+.content-col-of-2 {
+	max-width: 50%;
+}
+.content-col-of-3 {
+	max-width: 33%;
+}
+.content-col-of-4 {
+	max-width: 25%;
+}
+.content-col-of-5{
+	max-width: 20%;
+}
 
 .inlineForm { display: inline-block; }
