ID-3256 : fix various demo styling issues
Change-Id: I78983f09c90b396869bf218fd12e19338e4f5cb3

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -162,6 +162,8 @@
         }
     }
     &.form-error-message {
+        margin: 0 0 0 5px;
+        
         .tooltip-text {
             bottom: auto;
             margin: 0;
