ID-3475 : implement fixed input width per Chad and Lindsay
Change-Id: I7dd05a78d89ba67796a5d3d5ec43fd3715d4dedd

--- a/packages/ui-library/src/css/html-elements.scss
+++ b/packages/ui-library/src/css/html-elements.scss
@@ -42,3 +42,17 @@ strong {
 	font-weight: bold;
 	font-family: $font-pn-bold;
 }
+ul.ul {
+	margin: 5px 0 15px 20px;
+
+	li {
+		list-style: disc;
+	}
+}
+ol.ol {
+	margin: 5px 0 15px 20px;
+
+	li {
+		list-style: decimal;
+	}
+}
