ID-3624, ID-3644, ID-3642 --> grip/dragger shouldn't be visible when item is expanded; remove colon from label section when there is no label; sub-attributes display name divider should be dotted; add spacing at top of sub-attributes when multiple-attributes values present
Change-Id: I0f5525a8a3bc2f36897822c0d34aaff2bd518ece

--- a/packages/ui-library/src/css/data-sets.scss
+++ b/packages/ui-library/src/css/data-sets.scss
@@ -76,6 +76,11 @@
 			&:after {
 				content: ':';
 			}
+			&.no-data {
+				&:after {
+					content: '';
+				}
+			}
 		}
 		> span {
             display: table-cell;
