--- a/packages/ui-library/src/css/settings-sections.scss
+++ b/packages/ui-library/src/css/settings-sections.scss
@@ -79,8 +79,13 @@
                             content: '';
                         }
                     }
-
                 }
+            }
+        }
+        &.sub-attribute {
+            .delete-attribute {
+                position: absolute;
+                right: 20px;                
             }
         }
     }
