--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -14,6 +14,7 @@
 @import 'details-tooltip';
 @import 'help';
 @import 'html-elements';
+@import 'i18n-phone-input';
 @import 'icons';
 @import 'inputs';
 @import 'layout';
