ID-3568 --> fix for close button + icon-view for subattributes, further reduce width of inputs to account for delete button + margin-right for inputs
Change-Id: If698b6e7e63204ac0eb8fcc7ea2e3ded168fda16

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -208,8 +208,37 @@
             font-size: 16px;
             top: 24px;
 			&.close-link {
+				top: inherit;
 				bottom: 24px;
 			}
+			&.edit-link {
+                .edit {
+                    right: 120px;
+                    top: 3px;
+                    position: absolute;
+                }
+                .icon-view {
+                    top: 0;
+                    &.hide {
+                        @include opacity(.25);
+                    }
+                    &.disabled {
+                        cursor: not-allowed;
+                    }
+                }
+            }
+        }
+		.icon-view {
+            position: absolute;
+            top: 30px;
+            right: 80px;
+            &.hide {
+                display: block;
+                @include opacity(.25);
+            }
+            &.disabled {
+                cursor: not-allowed;
+            }
         }
 		.item-username {
 			font-family: $font-pn-regular;
