--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -10,7 +10,7 @@ table {
 		th, td {
 			text-align: left;
 			font-size: 14px;
-			padding: 0 15px 15px 0;
+			padding: 0 10px 15px 0;
 
 			&:last-of-type {
 				padding-left: 0;
@@ -25,6 +25,11 @@ table {
 			&.input-checkbox {
 				&.no-label {
 					padding: 0;
+				}
+			}
+			&.input-text {
+				&.no-label {
+					margin-right: 10px;
 				}
 			}
 		}
