fix bug with sass map-get. strangly not working for only the dolphin color. also added vars for each color
Change-Id: Iae181ed5a68bed918674a44347206f371e2f5fd3

--- a/packages/ui-library/src/css/data-sets.scss
+++ b/packages/ui-library/src/css/data-sets.scss
@@ -93,7 +93,7 @@
         &.data-title {
             > label {
                 padding-top: 25px;
-                color: map-get($colors, 'dolphin');
+                color: $color-dolphin;
             	text-transform: uppercase;
             	margin-bottom: 5px;
             	font-size: 15px;
