--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -665,7 +665,7 @@ label {
 .input-divider {
 	display: block;
 	margin: 25px 0;
-	border-top: 1px solid map-get($colors, 'dolphin');
+	border-top: 1px solid $color-dolphin;
 	&.dotted {
 	    border-top-style: dotted;
 	}
@@ -1465,7 +1465,7 @@ fieldset {
         }
     }
     &.focused {
-        border: 1px solid map-get($colors, 'dolphin');
+        border: 1px solid $color-dolphin;
         padding: 20px 25px 30px 25px;
         @include border-radius(5px);
 
