PA-3385 Pagination component
Change-Id: I24a5bb8ec6388e601941e639b72f41882d14d798

--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -22,6 +22,7 @@
 @import 'status-indicators';
 @import 'modals';
 @import 'multivalues';
+@import 'pagination';
 @import 'policy-engine';
 @import 'progress-indicators';
 @import 'result-sets';
