--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -302,8 +302,10 @@ label {
 			display: block;
 			margin-bottom: 5px;
 			padding: 0 0 0 30px;
+
 			.label-text {
 				display: inline-block;
+				text-transform: capitalize;
 				padding-top: 6px;
 			}
 		}
@@ -327,6 +329,10 @@ label {
 		&.stacked {
 			display: block;
 			margin-bottom: 13px;
+
+			.label-text {
+				text-transform: capitalize;
+			}
 			.help-tooltip {
 				&:after {
 					position: static;
@@ -457,7 +463,7 @@ label {
 	}
 	&.radio-group {
 		display: block;
-		margin: 0 0 15px 0;
+		margin: 0 0 10px 0;
 
 		.help-tooltip {
 			line-height: 1em;
