add back image path -- still used by flags as default
Change-Id: I8e67e70698b8844fe15d5442acabfb3b366f306a

--- a/packages/ui-library/src/css/globals.scss
+++ b/packages/ui-library/src/css/globals.scss
@@ -9,6 +9,7 @@
 // @font-face { font-family: 'ProximaNovaSemibold'; font-weight: normal; src: url('<path to source file>ProximaNova-Semibold.otf'); }
 // @font-face { font-family: 'ProximaNovaCondRegular'; font-weight: normal; src: url('<path to source file>ProximaNovaCond-Regular.otf'); }
 
+$img-path: '../images/';
 
 // MASTER COLOR LIST
 // Do not add or remove colors unless it is sanctioned by the design team
