--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -628,8 +628,8 @@ label {
 }
 .input-divider {
 	display: block;
-	margin: 25px 0;
-	border-top: 1px solid $color-dolphin;
+	margin: 0 0 15px 0;
+	border-top: 1px solid $color-rabbit-fur;
 	&.dotted {
 	    border-top-style: dotted;
 	}
