--- a/packages/ui-library/src/css/settings-sections.scss
+++ b/packages/ui-library/src/css/settings-sections.scss
@@ -42,7 +42,7 @@
     .section-title {
 		text-transform: uppercase;
         font-size: 16px;
-	    color: map-get($colors, 'rhino');
+	    color: map-get($colors, 'slate');
         font-family: $font-pn-regular;
         position: relative;
 
@@ -69,7 +69,7 @@
     }
     .section-container, .condition {
         padding-left: 27px;
-		margin: 20px 0 0 0;
+		margin: 25px 0 0 0;
         .menu {
             height: auto;
             .options {
@@ -112,7 +112,7 @@
 }
 
 .settings-table {
-	border: 1px solid #eee;
+	border: 1px solid $color-rabbit-fur;
 	display: inline-block;
 	clear: both;
 
@@ -123,7 +123,7 @@
 		> div {
 			display: table-cell;
 			padding: 10px;
-			border-bottom: 1px dotted #ddd;
+			border-bottom: 1px dotted $color-rabbit-fur;
 			min-width: 100px;
 		}
 		&:last-of-type {
@@ -133,6 +133,7 @@
 		}
 		.icon-check {
 			font-size: 12px;
+            color: $color-midnight;
 		}
 
 		&.headings {
@@ -140,7 +141,7 @@
 
 			> div {
 				display: table-cell;
-				border-bottom: 1px solid #ddd;
+				border-bottom: 1px solid $color-rabbit-fur;
 			}
 		}
 	}
@@ -150,7 +151,12 @@
 				&:first-of-type {
 					text-align: left;
 					font-family: $font-pn-regular;
-					color: map-get($colors, 'slate');
+                    text-transform: uppercase;
+					color: $color-elephant;
+                    &.value {
+                        text-transform: none;
+                        color: $color-midnight;                        
+                    }
 				}
 			}
 		}
