ID-3630 change case of radios and checkboxes when label is on side change file extension of test that was preventing lib startup
Change-Id: I711c3d01a62915b8e992a3f057b678e09adad908

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -308,6 +308,7 @@ label {
 			display: block;
 			margin-bottom: 5px;
 			padding: 0 0 0 30px;
+			text-transform: none;
 
 			.label-text {
 				display: inline-block;
@@ -335,6 +336,7 @@ label {
 		&.stacked {
 			display: block;
 			margin-bottom: 13px;
+			text-transform: none;
 
 			.label-text {
 				text-transform: capitalize;
@@ -1004,7 +1006,7 @@ label {
 		padding-right: 34px;
 		padding-left: 10px;
 	}
-	
+
 	&.input-text, &.input-textarea, &.input-select {
 		.input-container {
 			&:before {
